tests/health/gold/sdk/tests__ble-advertisement-test.toit.gold
<sdk>/ble/remote.toit:116:15: warning: Class 'AdvertisementData' is deprecated. Use 'Advertisement' instead
              AdvertisementData
              ^~~~~~~~~~~~~~~~~
<sdk>/ble/remote.toit:133:32: warning: Class 'AdvertisementData' is deprecated. Use 'Advertisement' instead
              AdvertisementData.raw_ next[2] --connectable=next[3]
                               ^~~~~
tests/ble-advertisement-test.toit:262:28: error: Class 'Advertisement' does not have any method 'manufacturer-data'
  expect-equals #[] packet.manufacturer-data
                           ^~~~~~~~~~~~~~~~~
